ajustando procedures